syntax = "proto3";

option csharp_namespace = "api";

import "google/protobuf/empty.proto";
package auth;

service Auth {
  rpc Login (UserCredentials) returns (AuthToken);
  rpc Register (UserCredentials) returns (AuthToken);
  rpc Me(google.protobuf.Empty) returns (MeResponse);
}

message UserCredentials {
  string username = 1;
  string password = 2;
}

message AuthToken {
  string Token = 1;
}

message MeResponse {
  string Username = 1;
}